add_executable(task_1768 1768_merge_strings_alternately/main.cpp)
add_executable(task_283 283_move_zeroes/main.cpp)
add_executable(task_643 643-maximum_average_subarray_1/main.cpp)
add_executable(task_1732 1732_find_the_highest_altitude/main.cpp)
add_executable(task_2215 2215_find_the_difference_of_two_arrays/main.cpp)
add_executable(task_2390 2390_removing_stars_from_a_string/main.cpp)
add_executable(task_930 933_number_of_recent_calls/main.cpp)
add_executable(task_841 841_keys_and_rooms/main.cpp)
add_executable(task_238 238/main.cpp)
add_executable(task_560 560/main.cpp)
add_executable(task_3 3/main.cpp)
add_executable(task_424 424/main.cpp)
add_executable(task_76 76/main.cpp)
add_executable(task_704 704/main.cpp)
add_executable(task_33 33/main.cpp)
add_executable(task_20 20/main.cpp)
add_executable(task_739 739/main.cpp)
add_executable(task_146 146/main.cpp)
add_executable(task_287 287/main.cpp)
add_executable(task_215 215/main.cpp)
add_executable(task_347 347/main.cpp)
